feat: completar implementación i18n y mejorar UX
- Actualizar pantalla inicial para usar app.title, app.subtitle, app.help
- Implementar validaciones con traducciones (validation.*)
- Usar labels mejorados con descripciones claras
- Eliminar preview de métricas calculadas en formulario inicial
- Mantener acordeón opcional sin botones confusos
- Asegurar botón deshabilitado hasta validación completa
- Implementar mascarilla numérica en todos los campos

--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -5,9 +5,9 @@
     "help": "Ingresá tus métricas del mes actual y obtené un diagnóstico claro y accionable."
   },
   "labels": {
-    "visits": "Visitas únicas (personas que entraron a tu web)",
-    "carts": "Carritos iniciados (personas que pusieron algo en el carrito)",
-    "orders": "Compras completadas (pedidos pagados)",
+    "visits": "Visitas únicas",
+    "carts": "Carritos iniciados",
+    "orders": "Compras completadas",
     "sales": "Ventas totales (USD)",
     "adspend": "Gasto en publicidad (USD)",
     "ordersCount": "Número de pedidos"
