feat: implementar suite completa de testing con casos borde y validaciones
- Actualizar nombres de categorías: oferta_web → pagina_oferta, checkout → checkout_confianza
- Reducir niveles financieros a 3: critical, fragile, strong (eliminar ok)
- Unificar keys: purchases → orders en todos los tests
- Agregar 4 tests de casos borde:
  * ATC = 3% exacto (debe ser Página/Oferta)
  * CB = 30% exacto (debe ser Checkout)
  * Visits = 499 (debe ser Tráfico)
  * Visits = 500 (NO debe ser Tráfico)
- Agregar 2 tests de validación:
  * carts > visits (debe fallar)
  * orders > carts (debe fallar)
- Agregar test de ROAS con adspend = 0 (manejar Infinity)
- Actualizar documentación TESTING.md con casos borde
- Actualizar test-data.json con casos completos
- Corregir lógica de clasificación para usar <= en umbrales
- Total: 15 tests (4 básicos + 4 casos borde + 2 validaciones + 4 financieros + 1 error handling)

Suite completamente alineada y lista para producción

--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -62,8 +62,8 @@
   },
   "bottlenecks": {
     "trafico": "Tráfico",
-    "oferta_web": "Página / Oferta",
-    "checkout": "Checkout / Confianza",
+    "pagina_oferta": "Página / Oferta", 
+    "checkout_confianza": "Checkout / Confianza",
     "escalar": "Listo para Escalar"
   },
   "result": {
@@ -97,7 +97,6 @@
     "level": {
       "critical": "Crítico",
       "fragile": "Frágil",
-      "ok": "Aceptable",
       "strong": "Sólido"
     },
     "notes": {
