feat: Header mobile-first con menú hamburguesa y botón dinámico de guardar
- Agregado Header responsive con menú hamburguesa para móvil
- Botón de guardar dinámico: 'Iniciar sesión con Google y guardar' vs 'Guardar diagnóstico'
- Redirección automática al Home cuando usuario cierra sesión desde resultados
- Mensaje de compartir genérico sin información personal
- Icono de compartir movido a la derecha del texto
- Fix: Problema del botón 'Obtener diagnóstico' que no funcionaba
- Debug logs agregados para troubleshooting
- Mobile-first design con opciones ocultas en móvil para no distraer usuarios nuevos

--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -28,7 +28,8 @@
   "buttons": {
     "getDiag": "Obtener diagnóstico",
     "calcFinance": "Calcular finanzas rápidas",
-    "loginSave": "Iniciar sesión y guardar",
+    "loginSave": "Iniciar sesión con Google y guardar",
+    "saveDiagnosis": "Guardar diagnóstico",
     "newDiag": "Hacer nuevo diagnóstico",
     "seeDetails": "Ver recomendaciones detalladas",
     "editData": "Recalcular"
