fix: Restaurar mejoras de responsividad y altura uniforme en tarjetas
- Aplicar responsividad móvil con text-xs sm:text-sm
- Usar padding reducido en móvil: px-2 py-1 sm:px-3 sm:py-2
- Agregar altura mínima ajustada: min-h-[2rem] sm:min-h-[2.5rem]
- Implementar flexbox para altura uniforme en ambas pantallas
- Usar mt-auto para mensajes de estado pegados abajo
- Remover whitespace-nowrap de títulos para mejor ajuste
- Quitar símbolo % de títulos de métricas
- Aplicar cambios en ResultCard y HistoryDetailModal
- Corregir estructura JSX y usar flex-1 para ancho uniforme

--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -62,8 +62,8 @@
     "CAC": "CAC (Customer Acquisition Cost) = Costo de adquirir un cliente"
   },
   "metrics": {
-    "atcTitle": "% Carritos vs. Visitas",
-    "cbTitle": "% Compras vs. Carritos", 
+    "atcTitle": "Carritos vs. Visitas",
+    "cbTitle": "Compras vs. Carritos", 
     "crTitle": "Tasa de Conversión",
     "atcNormal": "Normal entre un 4% y un 6%",
     "cbNormal": "Normal entre un 15% y un 25%",
