feat: Compra Rápida (checkouts>carritos) + Finanzas sin N.º de pedidos
Compra Rápida:
- diagnosis: si checkouts > carritos no bloquear; tasas sobre checkouts (effectiveCarts), quickBuyMode
- MetricsForm: permitir checkouts > carritos; solo exigir compras <= checkouts
- ResultCard: hint 'Compra Rápida detectada' cuando quickBuyMode; i18n result.quickBuyHint
- leadLog/page: envío de quickBuyMode en payload
- tests: caso 14 y lógica alineada en radar-casos-13.test.js

Finanzas rápidas:
- Quitar campo 'N.º de pedidos' del acordeón; usar siempre Compras completadas como ordersCount
- i18n: financeUsesCompras, ctaWithFinance, ctaWithoutFinance
- Validación financialBlockOk: no exigir orders; si hay ventas/ads basta con purchases > 0
- Interfaz MetricsFormData sin orders

--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -18,7 +18,9 @@
     "identity": "Identidad",
     "improvePrecision": "Mejorá la precisión (opcional)",
     "improvePrecisionDesc": "Si completás estos datos, te calculamos ROAS, ticket medio y CAC para ver si tus anuncios son sostenibles.",
-    "ordersFromComprasHint": "Si lo dejás vacío, usamos tus compras completadas para ROAS/AOV/CAC."
+    "financeUsesCompras": "Para AOV, ROAS y CAC usamos tu número de Compras completadas del bloque anterior.",
+    "ctaWithFinance": "Diagnóstico completo con métricas financieras",
+    "ctaWithoutFinance": "Obtén recomendaciones personalizadas en segundos"
   },
   "platforms": {
     "label": "Plataforma",
@@ -125,6 +127,7 @@
   "result": {
     "bottleneck": "Tu cuello principal: {{bottleneck}}",
     "sub": "Tu tienda {{msg}}. Abajo tenés 3 acciones simples para mover la aguja esta semana.",
+    "quickBuyHint": "Compra Rápida detectada: tasas calculadas sobre llegadas a pago (no sobre carritos).",
     "checkoutInsightTitle": "Dónde se rompe el proceso",
     "checkoutInsightLogistica": "Tu fuga está en la logística (costos de envío o tiempos). Revisá costos, plazos y umbral de envío gratis.",
     "checkoutInsightPago": "Tu fuga está en la pasarela o falta de cuotas. Revisá métodos de pago, cuotas y mensajes de confianza.",
