--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -20,7 +20,9 @@
     "improvePrecisionDesc": "Si completás estos datos, te calculamos ROAS, ticket medio y CAC para ver si tus anuncios son sostenibles.",
     "financeUsesCompras": "Para AOV, ROAS y CAC usamos tu número de Compras completadas del bloque anterior.",
     "ctaWithFinance": "Diagnóstico completo con métricas financieras",
-    "ctaWithoutFinance": "Obtén recomendaciones personalizadas en segundos"
+    "ctaWithoutFinance": "Obtén recomendaciones personalizadas en segundos",
+    "ctaCompleteToContinue": "Completá esto para continuar:",
+    "ctaBasicMetricsMissing": "Ingresá las métricas básicas (visitas, carritos, compras) en el formulario de arriba para continuar"
   },
   "platforms": {
     "label": "Plataforma",
@@ -82,7 +84,7 @@
     "required": "Ingresá un número.",
     "fieldRequired": "Campo obligatorio",
     "urlRequired": "Ingresá la URL de tu tienda.",
-    "urlInvalid": "Ingresa un dominio válido (ej. https://www.google.com/search?q=tienda.com)",
+    "urlInvalid": "Ingresá la URL de tu tienda",
     "platformRequired": "Seleccioná una plataforma.",
     "numeric": "Usá solo números (sin puntos ni comas).",
     "cartsGtVisits": "Los carritos no pueden ser mayores a las visitas",
