feat: CTA webinar + Unirme al grupo de WhatsApp en lugar del botón por diagnóstico
- CTA dinámico por diagnóstico (Ver solución para [dx]) comentado para reutilizar luego en página de venta
- Nuevo bloque: webinarLead1 + webinarLead2 (formación gratuita, Arquitectura de Conversión) + botón verde WhatsApp (#25D366) 'Unirme al grupo de WhatsApp'
- i18n: cta.webinarLead1, cta.webinarLead2, cta.joinWhatsAppGroup
- Sigue usando CTA_WHATSAPP_URL (NEXT_PUBLIC_CTA_WHATSAPP_URL) para el enlace del grupo

--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -151,6 +151,9 @@
   "cta": {
     "prefix": "Ver solución para",
     "primarySub": "WhatsApp o agendar consultoría",
+    "webinarLead1": "Si el diagnóstico del Radar te deja pensando y querés llevar tu tienda al siguiente nivel, quiero invitarte a una formación en vivo totalmente gratuita.",
+    "webinarLead2": "Ahí te voy a enseñar la \"Arquitectura de Conversión\": el sistema paso a paso que usamos para que la web explique, convenza y cierre sola, sin que vos tengas que estar pegado al celular 24/7.",
+    "joinWhatsAppGroup": "Unirme al grupo de WhatsApp",
     "primary": {
       "trafico": "Atraer clientes calificados a mi tienda",
       "pagina_oferta": "Dominar mi Arquitectura de Conversión",
